# nautilus_lab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  buildspec.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
config/strategies/: choch-detector.yaml  data-tester.yaml  orderbook-detector-cryptos.yaml  orderbook-detector.yaml  swing-detector.yaml  swing-reversal-strategy-live.yaml  swing-reversal-strategy.yaml
config/system/: backtest.yaml  binance-paper-trading-local.yaml  binance-paper-trading-spot.yaml  binance-paper-trading.yaml
deploy/: README.md  deploy.sh  ec2-userdata.sh
scripts/: get_telegram_chat_id.py
src/: app.py  args.py  config.py  nodes.py
src/api/: keys.py  webapp.py
src/api/middleware/: __init__.py  cors.py
src/api/models/: drawings.py  exchange.py  market.py
src/api/router/: base.py
src/api/router/v1/: __init__.py  drawing.py  exchange.py  market.py
src/api/router/websocket/: __init__.py  handler.py  manager.py  router.py
src/api/server/: agent.py  server.py
src/helpers/: bar.py  market_hours.py
src/indicators/choc/: choc.py  events.py
src/indicators/swings/: highlows.py
src/notifications/: README.md  __init__.py  bot.py  bridge.py  config.py
src/strategies/choch/: detector.py  enums.py  events.py  strategy.py  swing_strategy.py
src/strategies/choch/actors/: choch_detector.py  (+2 more)
src/strategies/data/: events.py
src/strategies/orderbooks/: detector.py  strategy.py
src/strategies/swing_bos/: choc_ob_strategy.py  events.py  market_detector_old.py  reversal_strategy.py
(+7 files in other folders)
