[project]
name = "nautilus-lab"
version = "0.1.0"
description = "Quantitative trading system built on top of NautilusTrader"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nautilus-trader>=1.230.0",
    "pyyaml>=6.0.3",
    # server
    "aiohttp>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.15",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.mypy]
python_version = "3.14"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disallow_untyped_decorators = false
